Version CVS HEAD (?)

  * packaging changes:
    - added autoconf checks for pthread library
    - added autoconf check for pthread bug found on certain NPTL-enabled
      glibc versions (see Gentoo bug report #194076)

  * general changes:
    - bugfix: the thread used by an editor plugin didn't die when the
      editor closed
    - bugfix: Ringbuffer.h:
      fill_write_space_with_null() did not zero out all the space
      operator--() did not apply size_mask after decrementing the read_ptr
      DEFAULT_WRAP_ELEMENTS set to 0 in order to avoid problems with
        the _NonVolatileReader functions.
     - bugfix: Stream.h: added a missing divide by BytesPerSample in GetWriteSpace()
       since this function is currently only used in the stream's
       qsort() compare function, it didn't trigger any bugs
     Resampler.h, Synthesizer.h:
       cubic interpolation now works in 24bit mode too
       faster method to read 24bit words on little endian machines (x86):
       replaced 3 byte reads + shifts with a 1 unaligned 32bit read and shift

  * AUDIO driver:
    - added Windows ASIO low latency audio driver 

  * MIDI driver:
    - added MME Windows MIDI driver

  * LSCP server:
    - added support for Windows style path / filenames, however with
      forward slash path separators instead of backslash
      (i.e. "C:/foo/bar.gig")
    - allow naughty liblscp to send non-string device parameters within
      apostrophes as well

Version 0.5.0 (15 October 2007)

  * packaging changes:
    - config.h is not going to be installed along with liblinuxsampler's
      API header files anymore
    - only the API relevant header (and source) files will be exported to
      the Doxygen API documentation (explicitly listed in Doxyfile.in)
    - added completely new XCode project files for Mac OSX which is now
      capable to execute our autoconf environment, thus no need anymore
      to maintain the compile time configuration file (osx/version.h) for