@@ -27,6 +27,14 @@ coremidi_src  =
 coremidi_ldflags =
 endif
 
+if HAVE_MME_MIDI
+mmemidi_src  = MidiInputDeviceMme.cpp MidiInputDeviceMme.h
+mmemidi_ladd = -lwinmm
+else
+mmemidi_src  =
+mmemidi_ladd =
+endif
+
 liblinuxsamplermididriverincludedir = $(includedir)/linuxsampler/drivers/midi
 liblinuxsamplermididriverinclude_HEADERS = \
 	midi.h \
@@ -43,7 +51,8 @@ liblinuxsamplermididriver_la_SOURCES = \
 	MidiInstrumentMapper.cpp MidiInstrumentMapper.h \
 	$(alsa_src) \
 	$(midishare_src)\
-	$(coremidi_src)
+	$(coremidi_src)\
+	$(mmemidi_src)
 
-liblinuxsamplermididriver_la_LIBADD = $(alsa_ladd) $(midishare_ladd)
+liblinuxsamplermididriver_la_LIBADD = $(alsa_ladd) $(midishare_ladd) $(mmemidi_ladd)
 liblinuxsamplermididriver_la_LDFLAGS = $(coremidi_ldflags)
